Fixed add button not align with dropdown list issue.

--- a/marquee-web-main/app/assets/stylesheets/project.sass
+++ b/marquee-web-main/app/assets/stylesheets/project.sass
@@ -316,10 +316,3 @@ ul.value
   color: #ff0000
 .readonly
   background: #f5f5f5
-
-.admin-content
-  .edit_user
-    .input
-      .chzn-container
-        float: left
-        margin-left: 5px
